deployment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parakeetasr
  namespace: service
spec:
  selector:
    matchLabels:
      app: parakeetasr #This is what is used to match pod names to preform rolling update deployments.
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: parakeetasr
    spec:
      containers:
        - name: parakeetasr
          image: parakeetasr
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "16Gi"
              cpu: "2000m"
      tolerations:
      - key: "nvidia.com/gpu"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      imagePullSecrets:
        - name: nexus-cred
