deployment/base/deployment_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crossbow-parakeet-service
  namespace: superpunch
spec:
  selector:
    matchLabels:
      app: crossbow-parakeet-service
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: crossbow-parakeet-service
    spec:
      containers:
      - name: crossbow-parakeet-service
        image: crossbow-parakeet-service
        resources:
          requests:
            memory: "4Gi"
            cpu: "2000m"
          limits:
            memory: "28Gi"
            cpu: "7000m"
      tolerations:
      - key: "nvidia.com/gpu"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      imagePullSecrets:
      - name: nexus-cred
