deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parakeetasr
  namespace: service
  labels:
    app: parakeetasr
spec:
  selector:
    app: parakeetasr
  type: ClusterIP
  ports:
  - port: 80
    name: http
    targetPort: 90
